--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,15 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+.header {
+  font-stretch: extra-expanded;
+  font-weight: 700;
+  text-align: center;
+  font-size: 20px;
+  font-family: sans-serif;
+  color: #488aff;
+}
+
+.gesatepedSelect{
+  max-width: 100% !important;
+}
