--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -21,8 +21,28 @@
   font-size: 20px;
   font-family: sans-serif;
   color: #488aff;
+  padding-bottom: 15px;
 }
 
 .gesatepedSelect{
   max-width: 100% !important;
+}
+
+.info-card {
+  font-size: 15px;
+  font-weight: 500;
+  padding-bottom: 20px;
+}
+
+.list-detail {
+  font-size: 12px;
+  padding: 8px;
+  border-bottom: solid 3px #a9a9b5;
+  border-radius: 5px;
+}
+
+.lead-detail {
+  color: darkblue;
+  font-size: 13px;
+  font-weight: 500;
 }
