Actualización autorefresh y manejo de sesión

--- a/src/pages/hoja-ruta/hoja-ruta.scss
+++ b/src/pages/hoja-ruta/hoja-ruta.scss
@@ -1,3 +1,9 @@
 page-hoja-ruta {
+  .pedido-activo {
+    background-color: rgba(40, 238, 95, 0.17);
+  }
+  .pedido-inactivo {
+    background-color: rgba(144, 141, 141, 0.25);
+  }
 
 }
