--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -38,7 +38,9 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  smoke:      rgba(144, 141, 141, 0.25),
+  leaf:       rgba(40, 238, 95, 0.17)
 );
 
 
