--- a/src/pages/hoja-ruta/hoja-ruta.scss
+++ b/src/pages/hoja-ruta/hoja-ruta.scss
@@ -5,5 +5,8 @@ page-hoja-ruta {
   .pedido-inactivo {
     background-color: rgba(144, 141, 141, 0.25);
   }
-
+  .label-md {
+    margin-top: 4px;
+    margin-bottom: 4px;
+  }
 }
