--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -47,9 +47,40 @@
   font-weight: 500;
 }
 
+.ocean-background {
+  background-color: #ededf3;
+}
+
 // Permitir line wrap en elementos select
 .alert-md .alert-radio-label,
 .alert-ios .alert-radio-label
 {
   white-space: normal !important;
+}
+
+.form {
+  .invalid-message{
+    min-height: auto;
+    margin-bottom: 5px;
+    padding-left: 0;
+    .label{
+      font-size: 12px;
+      color: red;
+      margin: 0;
+    }
+  }
+
+  ion-item {
+    &.invalid{
+      &.item-input{
+        border: 1px solid red;
+        margin-bottom: 5px;
+      }
+    }
+  }
+
+}
+
+ion-header {
+  padding-bottom: 0px !important;
 }
