--- a/src/pages/despacho/despacho.scss
+++ b/src/pages/despacho/despacho.scss
@@ -1,3 +1,10 @@
 page-despacho {
-
+  .validation-msg {
+    color: red;
+    font-size: 11px;
+  }
+  .input-fail {
+    border: 1px solid red;
+    border-radius: 5px;
+  }
 }
