--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -2,7 +2,25 @@ page-login {
   .session {
     text-align: center;
     font-weight: 700;
-    font-size: 18px;
-    color: #908d8d;
+    font-size: 17px;
+    color: #d90f14;
+    padding-bottom: 20px;
+    padding-top: 10px;
+
+  }
+
+  .sky {
+    background: url('#{$img-path}/texture-pattern.jpg') repeat-y;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: -1;
+  }
+  .roundItem {
+    border-radius: 10px;
+    border: 1px solid #d2d2d2;
+    margin-bottom: 25px;
   }
 }
