--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -28,6 +28,12 @@
   max-width: 100% !important;
 }
 
+.roundItem {
+  border-radius: 10px;
+  border: 1px solid #d2d2d2;
+  margin-bottom: 25px;
+}
+
 .info-card {
   font-size: 15px;
   font-weight: 500;
