--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -3,16 +3,12 @@ page-login {
     text-align: center;
     font-weight: 700;
     font-size: 17px;
-    color: #d90f14;
+    color: #bab3ad;
     padding-bottom: 20px;
     padding-top: 10px;
 
   }
 
 
-  .roundItem {
-    border-radius: 10px;
-    border: 1px solid #d2d2d2;
-    margin-bottom: 25px;
-  }
+
 }
